[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/interface concept.png" type="Texture" id=1]
[ext_resource path="res://LineEdit.gd" type="Script" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://assets/Fonts/PRESSSTART2P-VAV7.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Healthbar.tres" type="Theme" id=5]
[ext_resource path="res://assets/Manabar.tres" type="Theme" id=6]
[ext_resource path="res://Fight.gd" type="Script" id=7]
[ext_resource path="res://Slots.gd" type="Script" id=8]
[ext_resource path="res://assets/Item_icons/item_slot_default_background.png" type="Texture" id=9]
[ext_resource path="res://Inventory.gd" type="Script" id=10]
[ext_resource path="res://assets/Backgrounds/battleback1_0.png" type="Texture" id=11]
[ext_resource path="res://Pixelfont.tres" type="DynamicFont" id=12]
[ext_resource path="res://mediumpix.tres" type="DynamicFont" id=13]
[ext_resource path="res://Hoverbutton.tres" type="StyleBox" id=14]
[ext_resource path="res://NormalButton.tres" type="StyleBox" id=15]
[ext_resource path="res://PressButton.tres" type="StyleBox" id=16]
[ext_resource path="res://assets/Maps/MapPlaceholder.png" type="Texture" id=17]
[ext_resource path="res://MenuButton.gd" type="Script" id=18]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.262745, 0.764706, 1 )
border_width_right = 5
border_color = Color( 0.188235, 0.854902, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0666667, 0.105882, 0.290196, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_bottom = 3

[sub_resource type="Theme" id=6]
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 4 )
ProgressBar/styles/fg = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.752941, 0.372549, 0.658824, 1 )
border_width_right = 5
border_color = Color( 0.666667, 0.0117647, 0.0117647, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.266667, 0.184314, 0.266667, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.894118, 0.894118, 0.894118, 1 )
border_width_right = 5
border_color = Color( 0.666667, 0.0117647, 0.0117647, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.215686, 0.141176, 0.32549, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 18, 18 )

[sub_resource type="DynamicFont" id=14]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.00878906, 0.00875473, 0.00875473, 1 )

[sub_resource type="DynamicFont" id=15]
size = 11
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=16]

[node name="Game" type="Control"]
script = ExtResource( 3 )

[node name="interface concept" type="Sprite" parent="."]
position = Vector2( 1608, 1360 )
scale = Vector2( 1.56273, 1.51546 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 1 )
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerFrame" type="ColorRect" parent="Background"]
margin_left = 16.0
margin_top = 16.0
margin_right = 216.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 40, 136 )
color = Color( 0.247059, 0.247059, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="Background/PlayerFrame"]
margin_left = 16.0
margin_top = 16.0
margin_right = 184.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 13 )
text = "PLAYER"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="Background/PlayerFrame"]
margin_left = 16.0
margin_top = 79.0
margin_right = 184.0
margin_bottom = 95.0
theme = ExtResource( 5 )
max_value = 150.0
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="Label" parent="Background/PlayerFrame/HealthBar"]
margin_top = -24.0
margin_right = 168.0
margin_bottom = -1.0
custom_fonts/font = ExtResource( 12 )
text = "Health : 50/150"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="ProgressBar" parent="Background/PlayerFrame"]
margin_left = 16.0
margin_top = 144.0
margin_right = 184.0
margin_bottom = 160.0
theme = ExtResource( 6 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerMana" type="Label" parent="Background/PlayerFrame/ManaBar"]
anchor_top = -0.364
margin_top = -15.264
margin_right = 168.0
custom_fonts/font = ExtResource( 12 )
text = "Spirit : 50/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LustBar" type="ProgressBar" parent="Background/PlayerFrame"]
margin_left = 16.0
margin_top = 208.0
margin_right = 184.0
margin_bottom = 224.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
max_value = 150.0
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLust" type="Label" parent="Background/PlayerFrame/LustBar"]
anchor_top = -0.364
margin_top = -15.72
margin_right = 168.0
margin_bottom = 1.0
custom_fonts/font = ExtResource( 12 )
text = "Desire : 50/150"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlignmentBar" type="ProgressBar" parent="Background/PlayerFrame"]
margin_left = 16.0
margin_top = 272.0
margin_right = 184.0
margin_bottom = 288.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerAlignment" type="Label" parent="Background/PlayerFrame/AlignmentBar"]
margin_top = -24.0
margin_right = 168.0
custom_fonts/font = ExtResource( 12 )
text = "Alignment"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="Background/PlayerFrame"]
margin_left = 16.0
margin_top = 336.0
margin_right = 184.0
margin_bottom = 368.0
custom_fonts/font = ExtResource( 12 )
text = "Money: 200,000yp"
valign = 1
autowrap = true

[node name="VisualArea" type="ColorRect" parent="Background"]
margin_left = 232.0
margin_top = 16.0
margin_right = 784.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( -624, 120 )
color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="Visual" type="TextureRect" parent="Background/VisualArea"]
margin_left = 8.0
margin_top = 8.0
margin_right = 544.0
margin_bottom = 320.0
texture = ExtResource( 11 )
expand = true

[node name="Fight" type="Button" parent="Background/VisualArea/Visual"]
margin_right = 80.0
margin_bottom = 24.0
text = "Start Fight"
script = ExtResource( 7 )

[node name="MapBox" type="ColorRect" parent="Background/VisualArea/Visual"]
margin_left = 560.0
margin_top = -8.0
margin_right = 768.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -336, 32 )
color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="TextureRect" type="TextureRect" parent="Background/VisualArea/Visual/MapBox"]
margin_left = 8.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 160.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskArea" type="ColorRect" parent="Background"]
margin_left = 800.0
margin_top = 200.0
margin_right = 1008.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( -624, 120 )
color = Color( 0.247059, 0.247059, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskLog" type="Label" parent="Background/TaskArea"]
margin_left = 8.0
margin_top = 8.0
margin_right = 200.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 12 )
text = "- QUEST LOG -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Background/TaskArea/TaskLog"]
margin_top = 16.0
margin_right = 192.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/TaskArea/TaskLog/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 185.0
margin_bottom = 89.0

[node name="Inventory" type="ColorRect" parent="Background"]
margin_left = 800.0
margin_top = 344.0
margin_right = 1008.0
margin_bottom = 584.0
rect_pivot_offset = Vector2( -952, -152 )
color = Color( 0.247059, 0.247059, 0.247059, 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Background/Inventory"]
margin_left = 24.0
margin_top = 24.0
margin_right = 185.0
margin_bottom = 227.0
custom_constants/vseparation = 7
custom_constants/hseparation = 7
columns = 4

[node name="Slot 1" type="Panel" parent="Background/Inventory/GridContainer"]
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 2" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 42.0
margin_right = 77.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 3" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 84.0
margin_right = 119.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 4" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 126.0
margin_right = 161.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 5" type="Panel" parent="Background/Inventory/GridContainer"]
margin_top = 42.0
margin_right = 35.0
margin_bottom = 77.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 6" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 42.0
margin_top = 42.0
margin_right = 77.0
margin_bottom = 77.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 7" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 84.0
margin_top = 42.0
margin_right = 119.0
margin_bottom = 77.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 8" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 126.0
margin_top = 42.0
margin_right = 161.0
margin_bottom = 77.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 9" type="Panel" parent="Background/Inventory/GridContainer"]
margin_top = 84.0
margin_right = 35.0
margin_bottom = 119.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 10" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 42.0
margin_top = 84.0
margin_right = 77.0
margin_bottom = 119.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 11" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 84.0
margin_top = 84.0
margin_right = 119.0
margin_bottom = 119.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 12" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 126.0
margin_top = 84.0
margin_right = 161.0
margin_bottom = 119.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 13" type="Panel" parent="Background/Inventory/GridContainer"]
margin_top = 126.0
margin_right = 35.0
margin_bottom = 161.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 14" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 42.0
margin_top = 126.0
margin_right = 77.0
margin_bottom = 161.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 15" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 84.0
margin_top = 126.0
margin_right = 119.0
margin_bottom = 161.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 16" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 126.0
margin_top = 126.0
margin_right = 161.0
margin_bottom = 161.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 17" type="Panel" parent="Background/Inventory/GridContainer"]
margin_top = 168.0
margin_right = 35.0
margin_bottom = 203.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 18" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 42.0
margin_top = 168.0
margin_right = 77.0
margin_bottom = 203.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 19" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 84.0
margin_top = 168.0
margin_right = 119.0
margin_bottom = 203.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="Slot 20" type="Panel" parent="Background/Inventory/GridContainer"]
margin_left = 126.0
margin_top = 168.0
margin_right = 161.0
margin_bottom = 203.0
rect_min_size = Vector2( 35, 35 )
custom_styles/panel = SubResource( 11 )
script = ExtResource( 8 )

[node name="TextArea" type="ColorRect" parent="Background"]
margin_left = 232.0
margin_top = 360.0
margin_right = 784.0
margin_bottom = 584.0
rect_pivot_offset = Vector2( -624, 120 )
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="Background/TextArea"]
margin_left = 32.0
margin_top = 184.0
margin_right = 544.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( -336, 144 )
custom_fonts/font = SubResource( 14 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
max_length = 38
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Background/TextArea/Input"]
margin_left = -24.0
margin_bottom = 32.0
color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )

[node name="Caret" type="Label" parent="Background/TextArea"]
margin_left = 8.0
margin_top = 192.0
margin_right = 48.0
margin_bottom = 208.0
custom_colors/font_color = Color( 0.839216, 0.839216, 0.839216, 1 )
custom_fonts/font = SubResource( 15 )
text = " >  "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameInfo" type="PanelContainer" parent="Background/TextArea"]
margin_left = 8.0
margin_top = 8.0
margin_right = 544.0
margin_bottom = 176.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="Background/TextArea/GameInfo"]
margin_right = 536.0
margin_bottom = 168.0
scroll_horizontal_enabled = false

[node name="HistoryRows" type="VBoxContainer" parent="Background/TextArea/GameInfo/Scroll"]
margin_right = 536.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menus" type="ColorRect" parent="Background"]
margin_left = 16.0
margin_top = 440.0
margin_right = 216.0
margin_bottom = 584.0
color = Color( 0.247059, 0.247059, 0.247059, 1 )
script = ExtResource( 18 )

[node name="PlayerButton" type="Button" parent="Background/Menus"]
margin_left = 16.0
margin_top = 24.0
margin_right = 96.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( -312, -32 )
focus_mode = 0
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/normal = ExtResource( 15 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "PLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsButton" type="Button" parent="Background/Menus"]
margin_left = 104.0
margin_top = 24.0
margin_right = 184.0
margin_bottom = 64.0
focus_mode = 0
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/normal = ExtResource( 15 )
enabled_focus_mode = 0
text = "SKILLS"

[node name="OptionsButton" type="Button" parent="Background/Menus"]
margin_left = 16.0
margin_top = 80.0
margin_right = 96.0
margin_bottom = 120.0
focus_mode = 0
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/normal = ExtResource( 15 )
enabled_focus_mode = 0
text = "OPTIONS"

[node name="MenuButton" type="Button" parent="Background/Menus"]
margin_left = 104.0
margin_top = 80.0
margin_right = 184.0
margin_bottom = 120.0
focus_mode = 0
custom_fonts/font = ExtResource( 12 )
custom_styles/hover = ExtResource( 14 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/normal = ExtResource( 15 )
enabled_focus_mode = 0
text = "MENU"

[node name="PlayerTab" type="ColorRect" parent="Background/Menus"]
visible = false
margin_left = 224.0
margin_top = -416.0
margin_right = 760.0
margin_bottom = -104.0
color = Color( 0.364706, 0.364706, 0.364706, 1 )

[node name="SkillTab" type="ColorRect" parent="Background/Menus"]
visible = false
margin_left = 224.0
margin_top = -416.0
margin_right = 760.0
margin_bottom = -104.0
color = Color( 0.364706, 0.364706, 0.364706, 1 )

[node name="MenuTab" type="ColorRect" parent="Background/Menus"]
visible = false
margin_left = 216.0
margin_top = -424.0
margin_right = 992.0
margin_bottom = 144.0
color = Color( 0.364706, 0.364706, 0.364706, 1 )

[node name="OptionsTab" type="ColorRect" parent="Background/Menus"]
visible = false
margin_left = 216.0
margin_top = -424.0
margin_right = 992.0
margin_bottom = 144.0
color = Color( 0.364706, 0.364706, 0.364706, 1 )

[connection signal="pressed" from="Background/VisualArea/Visual/Fight" to="Background/VisualArea/Visual/Fight" method="_on_Fight_pressed"]
[connection signal="text_entered" from="Background/TextArea/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/TextArea/Input" to="Background/TextArea/Input" method="_on_Input_text_entered"]
[connection signal="pressed" from="Background/Menus/MenuButton" to="Background/Menus/MenuButton" method="_on_MenuButton_pressed"]
